--- a/3 - css/styles/style.css
+++ b/3 - css/styles/style.css
@@ -35,6 +35,15 @@ h2 {
     color: rgb(30,62,114);
 }
 
+h4 {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: rgb(109, 123, 147);
+    font-family: 'Poppins', sans-serif;
+    color: rgb(30,62,114);
+}
+
 .container{
     display:flex;
     flex-direction: column;
@@ -174,15 +183,6 @@ h2 {
     box-shadow: 0px 3px 7px rgb(227, 234, 255);
 }
 
-.card h4 {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
-    color: rgb(109, 123, 147);
-    font-family: 'Poppins', sans-serif;
-    color: rgb(30,62,114);
-}
-
 .card p {
     font-size: 13px;
     line-height: 23px;
@@ -249,4 +249,81 @@ h2 {
 .column .icon img {
     height: 20px;
     width: 20px;
+}
+
+.section4 {
+    display: flex;
+    width: 100%;
+    height: 900px;
+}
+
+.section4 .right {
+    margin-top: 200px;
+    margin-bottom: 100px;
+    width: 50%;
+}
+
+.section4 .right img {
+    width: 100%;
+}
+
+.section4 .left{
+    padding: 30px 200px 0px 100px;
+    width: 50%;
+}
+
+.grid-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-between;
+    margin-top: 100px;
+    height: 460px;
+}
+
+.grid {
+    border-radius: 10px;
+    width: 200px;
+    height:150px;
+    padding: 30px;
+    box-shadow: 0px 3px 7px rgb(227, 234, 255);
+}
+
+.grid h4 {
+    line-height: 9px;
+}
+
+.grid p {
+    font-size: 13px;
+    line-height: 15px;
+}
+
+.grid .top {
+    display: flex;
+    align-items: center;
+}
+
+.grid img {
+    height: 30px;
+}
+
+.grid .icon{
+    margin-right: 20px;
+    height: 55px;
+    width: 40px;
+}
+
+.grid .button {
+    display: flex;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Palanquin Dark', sans-serif;
+    font-size: 20px;
+}
+
+.light { 
+    background-color: rgb(221,229,255);
+    color: rgb(54,87,214);
+    box-shadow: 0px 3px 7px rgb(227, 234, 255);
 }
